fixed responsiveness on iphone se

--- a/styles/main.css
+++ b/styles/main.css
@@ -246,12 +246,19 @@ button:hover {
     display: none;
   }
 
-  .display-game-section {
-    padding-top: 20px;
-  }
-
   iframe {
     width: 400px;
     height: 300px;
   }
+}
+
+@media only screen and (max-width: 700px) {
+  .display-game-section {
+    padding-top: 20px;
+  }
+
+  .landing-page-section h1 {
+    width: 80vw;
+  }
+
 }
